--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <script>
       // Generating the form based on tuotedata.js
-      // Data and osastot are table-names in the tuotedata.js
+      // Data and osastot are tables in tuotedata.js
       function createForm() {
         form = document.getElementById("formed");
 
@@ -53,7 +53,7 @@
           }
         }
 
-        // FA fee text-field for the groceries missing from the form
+        // Open text-field for the groceries missing from the form
         form.appendChild(document.createElement("br"));
         form.appendChild(document.createElement("hr"));
         form.appendChild(document.createElement("br"));
